--- a/_package-export/example/package.json
+++ b/_package-export/example/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.27.0",
     "next": "^14.0.0",
     "prism-react-renderer": "^2.4.1",
     "react": "^18.2.0",
