--- a/_package-export/vercel.json
+++ b/_package-export/vercel.json
@@ -2,5 +2,5 @@
   "framework": null,
   "installCommand": "pnpm install",
   "buildCommand": "pnpm build && cd example && pnpm build",
-  "outputDirectory": "example/.next"
+  "outputDirectory": "example/out"
 }
