Fix routing - add cleanUrls and trailingSlash config

--- a/_package-export/vercel.json
+++ b/_package-export/vercel.json
@@ -2,5 +2,7 @@
   "framework": null,
   "installCommand": "pnpm install",
   "buildCommand": "pnpm build && cd example && pnpm build",
-  "outputDirectory": "example/out"
+  "outputDirectory": "example/out",
+  "cleanUrls": true,
+  "trailingSlash": false
 }
