--- a/vite-plugin/package.json
+++ b/vite-plugin/package.json
@@ -21,6 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
+    "agentation": "*",
     "vite": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
   },
   "devDependencies": {
